k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-playground
spec:
  type: ClusterIP
  selector:
    app: dotnet-playground
  ports:
    - name: http
      port: 80
      targetPort: 8080
