k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-playground
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dotnet-playground.local # ← replace
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-playground
                port:
                  number: 80
